syntax = 'proto3';
package databaseprovider;

message CreateSchemaRequest {
  Schema schema = 1;
}

message CreateSchemaResponse {
  Schema schema = 1;
}

message GetSchemaRequest {
  string schemaName = 1;
}

message GetSchemaResponse {
  Schema schema = 1;
}

message Schema {
  string name = 1;
  string modelSchema = 2;
  string modelOptions = 3;
}

service DatabaseProvider {
  rpc CreateSchemaFromAdapter(CreateSchemaRequest) returns (CreateSchemaResponse);
  rpc GetSchema(GetSchemaRequest) returns (GetSchemaResponse);
}
